# sombra

./: .editorconfig  .gitignore  .npmignore  .pre-commit-config.yaml  .release-please-manifest.json  BENCHMARK_ANALYSIS.md  BTREE_SESSION2_COMPLETION.md  CHANGELOG-js.md  CHANGELOG-python.md  CHANGELOG-rust.md  CHANGELOG.md  CHECKSUM_BENCHMARK_RESULTS.md  CHECKSUM_FIX_SUMMARY.md  COMPATIBILITY.md  CONCURRENCY.md  CONCURRENT_PLAN.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MONOREPO_IMPLEMENTATION.md  NEXT_STEPS_SUMMARY.md  OPTIMIZATION.md  PATTERN_MATCHING_SESSION_COMPLETE.md  PHASE1_BTREE_COMPLETE.md  PHASE1_OPTIMIZATIONS_COMPLETE.md  PRODUCTION_PLAN.md  PRODUCTION_READINESS.md  PYTHON_BINDINGS_FIX_REPORT.md  QUERY_API_BINDINGS_COMPLETION.md  README.md  README_BENCHMARKS.md  READ_PERFORMANCE_IMPROVEMENTS.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  SECURITY_HARDENING_REPORT.md  SESSION_SUMMARY.md  TRAVERSAL_TESTING_COMPLETE.md  TYPED_API_SUMMARY.md  (+24 more)
.cargo/: config.toml
bench/: baseline.md
benches/: benchmark_main.rs  btree_benchmark.rs  btree_enhancement_benchmark.rs  concurrency_benchmark.rs  crud.rs  index_benchmark.rs  macro_import.rs  macro_queries.rs  micro_adjacency.rs  micro_btree.rs  micro_property.rs  micro_vstore.rs  micro_wal.rs  mod.rs  optimization_benchmark.rs  perf_optimizations.rs  property_update_benchmark.rs  quick_read_test.rs  read_benchmark.rs  scalability_benchmark.rs  simple_read_benchmark.rs  small_read_benchmark.rs  traversal_benchmark.rs
bindings/node/: .gitattributes  CHANGELOG-js.md  Cargo.toml  README.md  final-bench.mjs  index.d.ts  index.js  main.d.ts  main.js  package-lock.json  package.json  tsconfig.json  typed.d.ts  typed.js
bindings/node/.github/workflows/: CI.yml
bindings/node/__test__/: index.spec.ts  schema-types.ts  tsconfig.json
bindings/node/benchmark/: crud.mjs  neo4j-compare.mjs  profile-sombra.mjs  typed-batch-debug.mjs  typed-batch.mjs
bindings/node/examples/: bulk_create.js  crud.js  fluent_query.ts  people.ts  reopen.ts  shared.ts  typed-example.db  typed-example.db-wal  typed.ts
bindings/node/src/: lib.rs
bindings/python/: CHANGELOG-python.md  Cargo.toml  README.md  pyproject.toml
bindings/python/benchmarks/: crud.py  realistic_bench.py
bindings/python/examples/: bulk_load_typed.py  crud.py  fluent_query.py  typed.py
bindings/python/sombra/: __init__.py  _native.rs  query.py
bindings/python/sombra/typed/: __init__.py  db.py  schema.py
bindings/python/sombra_py/: __init__.py  _native.rs  query.py
bindings/python/tests/: test_query.py  test_typed.py
crates/sombra-admin/: Cargo.toml
crates/sombra-admin/src/: checkpoint.rs  error.rs  lib.rs  options.rs  stats.rs  util.rs  vacuum.rs  verify.rs
crates/sombra-bench/: Cargo.toml
crates/sombra-bench/benches/: crud.rs  macro_import.rs  macro_queries.rs  micro_adjacency.rs  micro_btree.rs  micro_property.rs  micro_vstore.rs  micro_wal.rs
crates/sombra-bench/src/: datasets.rs  env.rs  lib.rs
crates/sombra-catalog/: Cargo.toml
crates/sombra-catalog/src/: lib.rs
crates/sombra-catalog/tests/: dict.rs
crates/sombra-cli/: Cargo.toml
crates/sombra-cli/src/: import_export.rs  lib.rs  main.rs
crates/sombra-cli/tests/: admin_commands.rs
crates/sombra-concurrency/: Cargo.toml
crates/sombra-concurrency/src/: lib.rs
crates/sombra-core/: Cargo.toml
crates/sombra-core/src/: lib.rs
crates/sombra-ffi/: Cargo.toml
crates/sombra-ffi/src/: lib.rs
crates/sombra-pager/: Cargo.toml
crates/sombra-pager/src/: frame.rs  freelist.rs  meta.rs  pager.rs
crates/sombra-pager/tests/: stage3_end_to_end.rs
crates/sombra-query/: Cargo.toml
crates/sombra-query/src/: builder.rs  executor.rs  lib.rs  logical.rs  metadata.rs  physical.rs  planner.rs  profile.rs
crates/sombra-storage/: Cargo.toml
crates/sombra-storage/benches/: expand.rs
crates/sombra-storage/src/: adjacency.rs  edge.rs  graph.rs  lib.rs  node.rs  options.rs  patch.rs  props.rs  types.rs
crates/sombra-storage/tests/: phase1.rs  phase2.rs  phase3.rs  stage7.rs  stress.rs
crates/sombra-vstore/: Cargo.toml
crates/sombra-vstore/src/: lib.rs
crates/sombra-vstore/tests/: vstore.rs
crates/sombra-wal/: Cargo.toml
crates/sombra-wal/src/: lib.rs
docs/: CONTRIBUTING.md  MIGRATION_monolithic.md  STAGE0_repo_setup.md  STAGE1_2_bytes_io_pager.md  api-type-safety-roadmap.md  architecture.md  benchmarks.md  btree_index_implementation.md  btree_phase2_enhancements.md  cli-dx-plan.md  cli.md  configuration.md  contributing.md  dashboard-plan.md  data_model.md  edge_type_index.md  getting-started.md  isolation-guarantees.md  lifecycle.md  lookup_optimization_plan.md  migration-0.1-to-0.2.md  mvcc-baseline.md  mvcc-durability.md  mvcc-optimization-plan.md  nodejs-guide.md  nodejs_usage.md  operations.md  optimization_api_guide.md  perf-optimizations.md  performance.md  performance_metrics.md  phase1_completion_report.md  phase3_completion_report.md  phase4_completion_report.md  phase4_testing_validation_report.md  phase5_completion_report.md  phase7_completion_report.md  production-readiness.md  production.md  production_ready_8_10_implementation_plan.md  (+7 more)
examples/: benchmark_main.rs  checksum_comprehensive_benchmark.rs  checksum_throughput_benchmark.rs  code_analysis.rs  deletion_cycle.rs  knowledge_graph.rs  metrics_monitor.rs  monitoring_integration.rs  node_lookup_benchmark.rs  performance_metrics_demo.rs  recommendation_engine.rs  social_graph.rs  social_network.py  transaction_handling.rs  typescript-example.ts  verify_db.rs
fuzz/: Cargo.toml
k8s/: README.md  deployment.yaml
python/: sombra.pyi
scripts/: README.md  benchmark.sh  build-wheels.sh  demo-cli-web.sh  fix-exports.js  generate_graph_demo.py  ldbc_to_sombra.py  publish-with-delay.sh  release.sh  run-benchmarks.sh  run-prod-sanity.sh  test-all.sh  validate-cli-web.sh
src/: benchmark_suite.rs  bindings.rs  data_generator.rs  error.rs  lib.rs  logging.rs  model.rs  performance_utils.rs  python.rs  sqlite_adapter.rs
test/: test-comprehensive.js  test-pattern-matching.js  (+1 more)
(+290 files in other folders)
