[package]
name = "sombra"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false
authors = ["Sombra DB Developers"]

[lib]
name = "sombra"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "fast-bench"
path = "src/bin/fast_bench.rs"

[[bin]]
name = "compare-bench"
path = "src/bin/compare_bench.rs"

[features]
default = []
degree-cache = []
ffi-benches = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bytes = "1"
crc32fast = "1.4"
csv = "1.3"
hex = "0.4"
lru = "0.12"
parking_lot = { version = "0.12", features = ["arc_lock"] }
rand = "0.8"
smallvec = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1"
rustc-hash = "1.1"
siphasher = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
proptest = "1.9.0"
tempfile = "3.10.1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
rand_chacha = "0.3"

[dependencies.tempfile]
version = "3.10.1"

[dependencies.rand_chacha]
version = "0.3"

[dependencies.rusqlite]
version = "0.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
