[package]
name = "sombra"
version = "0.3.6"
edition = "2021"
license = "MIT"
publish = false
authors = ["Sombra DB Developers"]

[lib]
name = "sombra"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "fast-bench"
path = "src/bin/fast_bench.rs"

[[bin]]
name = "compare-bench"
path = "src/bin/compare_bench.rs"

[[test]]
name = "catalog_dict"
path = "tests/integration/catalog_dict.rs"

[[test]]
name = "admin_phase1"
path = "tests/integration/admin_phase1.rs"

[[test]]
name = "cli_admin_commands"
path = "tests/integration/cli_admin_commands.rs"

[[test]]
name = "pager_stage3_end_to_end"
path = "tests/integration/pager_stage3_end_to_end.rs"

[[test]]
name = "storage_phase1"
path = "tests/integration/storage_phase1.rs"

[[test]]
name = "storage_phase2"
path = "tests/integration/storage_phase2.rs"

[[test]]
name = "storage_phase3"
path = "tests/integration/storage_phase3.rs"

[[test]]
name = "storage_stage7"
path = "tests/integration/storage_stage7.rs"

[[test]]
name = "storage_stress"
path = "tests/integration/storage_stress.rs"

[[test]]
name = "vstore"
path = "tests/integration/vstore.rs"

[[test]]
name = "wal_crash_replay"
path = "tests/integration/wal_crash_replay.rs"

[[test]]
name = "vacuum_worker"
path = "tests/integration/vacuum_worker.rs"

[features]
default = ["bundled-dashboard"]
bundled-dashboard = ["include_dir", "mime_guess"]
degree-cache = []
ffi-benches = []
btree-in-place-debug = []
dashboard = []

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
bytes = "1"
crc32fast = "1.4"
csv = "1.3"
hex = "0.4"
lru = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "time"] }
axum = { version = "0.7", features = ["macros", "json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }
hyper = "1"
base64 = "0.21"
parking_lot = { version = "0.12", features = ["arc_lock"] }
rand = "0.8"
smallvec = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
snap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustc-hash = "1.1"
siphasher = "0.3"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
time = { version = "0.3", features = ["macros", "parsing"] }
include_dir = { version = "0.7", optional = true }
mime_guess = { version = "2.0", optional = true }
nu-ansi-term = "0.49"
dirs = "5"
toml = "0.8"
indicatif = { version = "0.17", features = ["tokio"] }
clap_complete = "4.5"

[dev-dependencies]
assert_cmd = "2.0"
proptest = "1.9.0"
tempfile = "3.10.1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
rand_chacha = "0.3"

[dependencies.tempfile]
version = "3.10.1"

[dependencies.rand_chacha]
version = "0.3"

[dependencies.rusqlite]
version = "0.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
