[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sombra"
version = "0.1.26"
description = "A high-performance graph database with ACID transactions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "mask", email = "maskdotdev@gmail.com"}
]
keywords = ["graph", "database", "graphdb", "acid", "transactions", "rust", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/maskdotdev/sombra"
Repository = "https://github.com/maskdotdev/sombra"
Issues = "https://github.com/maskdotdev/sombra/issues"

[tool.maturin]
features = ["python"]
module-name = "sombra"
python-source = "python"
generate-import-lib = true
