
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "sombradb"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "=3.5.0", features = ["serde-json", "dyn-symbols"] }
napi-derive = "=3.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sombra-ffi = { workspace = true }
sombra-pager = { workspace = true }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
