
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "sombradb"
version = "0.5.4"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "=3.5.0", features = ["serde-json", "dyn-symbols", "napi6"] }
napi-derive = "=3.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sombra = { path = "../.." }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
