[package]
name = "sombra-py-native"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "sombra_py_native"
crate-type = ["cdylib"]
path = "sombra_py/_native.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sombra-ffi = { workspace = true }
sombra-pager = { workspace = true }
