[package]
name = "sombra-py-native"
version = "0.3.7"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "sombra_py_native"
crate-type = ["cdylib"]
path = "sombra/_native.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sombra = { path = "../.." }
