[package]
name = "sombra-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
sombra-pager = { workspace = true }
sombra-storage = { workspace = true }
sombra-catalog = { workspace = true }
sombra-types = { workspace = true }
