[package]
name = "sombra-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
criterion = { version = "0.5", optional = true }
sombra-core = { workspace = true }
sombra-types = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
walkdir = "2"
thiserror = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
sombra-admin = { workspace = true }
sombra-cli = { workspace = true }
sombra-ffi = { workspace = true }
sombra-pager.workspace = true
tempfile = "3"

[dev-dependencies]
sombra-storage = { workspace = true }
sombra-vstore = { workspace = true }
sombra-wal = { workspace = true }
sombra-btree = { workspace = true }
sombra-index = { workspace = true }

[features]
default = []
bench = ["criterion"]

[[bench]]
name = "crud"
harness = false
required-features = ["bench"]

[[bench]]
name = "micro_btree"
harness = false
required-features = ["bench"]

[[bench]]
name = "micro_adjacency"
harness = false
required-features = ["bench"]

[[bench]]
name = "micro_property"
harness = false
required-features = ["bench"]

[[bench]]
name = "micro_vstore"
harness = false
required-features = ["bench"]

[[bench]]
name = "micro_wal"
harness = false
required-features = ["bench"]

[[bench]]
name = "macro_import"
harness = false
required-features = ["bench"]

[[bench]]
name = "macro_queries"
harness = false
required-features = ["bench"]

[[bin]]
name = "bench-collector"
path = "src/bin/collect.rs"

[[bin]]
name = "ldbc-baseline"
path = "src/bin/ldbc.rs"

[[bin]]
name = "quick-ops"
path = "src/bin/quick_ops.rs"
