[package]
name = "sombra-catalog"
version = "0.0.0"
edition = "2021"

[dependencies]
sombra-types = { path = "../sombra-types" }
sombra-pager = { path = "../sombra-pager" }
sombra-btree = { path = "../sombra-btree" }
sombra-vstore = { path = "../sombra-vstore" }
sombra-bytes = { path = "../sombra-bytes" }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
