[package]
name = "sombra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "sombra_cli"
path = "src/lib.rs"

[[bin]]
name = "sombra"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sombra-pager = { workspace = true }
sombra-admin = { workspace = true }
serde = { version = "1", features = ["derive"] }
csv = "1"
thiserror.workspace = true
sombra-storage = { workspace = true }
sombra-catalog = { workspace = true }
sombra-types = { workspace = true }
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
sombra-ffi = { workspace = true }
