[package]
name = "sombra-concurrency"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
parking_lot.workspace = true
sombra-types = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
tempfile = "3.10.1"
