[package]
name = "sombra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
sombra-bytes = { workspace = true }
sombra-checksum = { workspace = true }
sombra-io = { workspace = true }
sombra-pager = { workspace = true }
sombra-types = { workspace = true }
tracing.workspace = true
