[package]
name = "sombra-pager"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
parking_lot.workspace = true
sombra-bytes = { workspace = true }
sombra-checksum = { workspace = true }
sombra-io = { workspace = true }
sombra-wal = { workspace = true }
sombra-concurrency = { workspace = true }
sombra-types = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = "3.10.1"
