[package]
name = "sombra-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sombra-types.workspace = true
sombra-index.workspace = true
sombra-storage.workspace = true
sombra-catalog.workspace = true
sombra-pager.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
