[package]
name = "sombra-storage"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
bench = false

[features]
default = []
degree-cache = []

[dependencies]
smallvec = "1.11"
thiserror = "1"
tracing = { workspace = true }
sombra-btree = { path = "../sombra-btree" }
sombra-bytes = { path = "../sombra-bytes" }
sombra-catalog = { path = "../sombra-catalog" }
sombra-index = { path = "../sombra-index" }
sombra-pager = { path = "../sombra-pager" }
sombra-types = { path = "../sombra-types" }
sombra-vstore = { path = "../sombra-vstore" }

[dev-dependencies]
tempfile = "3"
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
