[package]
name = "sombra-wal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
parking_lot.workspace = true
sombra-checksum = { workspace = true }
sombra-io = { workspace = true }
sombra-types = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"
